--- a/FSW-100/week6/website/styles.css
+++ b/FSW-100/week6/website/styles.css
@@ -49,6 +49,18 @@ padding: 2rem 9%;
     background-color: var(--black);
 }
 
+.heading {
+    text-align: center;
+    color: var(--black);
+    text-transform: uppercase;
+    padding: 1rem;
+    font-size: 3.5rem;
+}
+
+.heading span{
+    color: var(--green);
+
+}
 .header-1 {
     background: #eee;
     display: flex;
@@ -191,16 +203,132 @@ background:none;
     font-size: 2rem;
 }
 
+.category .box-container{
+    display: flex;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+}
+
+.category .box-container .box{
+    
+    border: .1rem solid rgba(0,0,0,.3);
+    border-radius: .5rem;
+    text-align: center;
+    padding: 2rem;
+    flex: 1 1 25rem;
+}
+.category .box-container .box img{
+    width: 30rem;
+    height: 20rem;
+    margin: .5rem 0;
+}
+
+.category .box-container .box h3{
+    font-size: 3.5rem;
+    color: var(--black);
+}
+
+.category .box-container .box p{
+    font-size: 2rem;
+    color: var(--brown);
+    padding: .5rem 0;
+}
+
+.category .box-container .box .btn{
+    display: block;
+}
 
 
+.product .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
 
+}
 
+.product .box-container .box{
+    flex: 1 1 30rem;
+    text-align: center;
+    padding: 2rem;
+    border: .1rem solid rgba(0,0,0,.3);
+    border-radius: .5rem;
+    overflow: hidden;
+    position: relative;
+}
 
+.product .box-container .box img {
+    height: 20rem;
+}
 
+.product .box-container .box .icons{
+    position: absolute;
+    top: .5rem; right: -6rem;
+}
 
+.product .box-container .box:hover .icons{
+right: 1rem;
+}
 
+.product .box-container .box .icons a{
+    display: block;
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    font-size: 1.7rem;
+    color: var(--black);
+    background: rgba(0,0,0,.05);
+    border-radius: 50%;
+    margin-top: .7rem;
 
+}
 
+.product .box-container .box .icons a:hover{
+    background: var(--green);
+    color: #fff;
+}
+
+.product .box-container .box h3{
+    color: var(--brown);
+    font-size: 3rem;
+}
+
+.product .box-container .box .stars i{
+padding: 1rem .1rem;
+font-size: 1.7rem;
+color: gold;
+}
+
+.product .box-container .box .price {
+    font-size: 2rem;
+    color: #333;
+    padding: .5rem 0;
+
+}
+.product .box-container .box .quantity {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #333;
+    padding-top: 1rem;
+}
+
+.product .box-container .box .quantity span{
+    padding: 0 .7rem;
+    font-size: 1.7rem;
+}
+
+.product .box-container .box .quantity input{
+    border: .1rem solid rgba(0,0,0,.3);
+    font-size:1.5rem;
+    font-weight: bolder;
+    color: var(--black);
+    padding: .5rem;
+    background:rgba(0,0,0,.05) ;
+}
+
+.product .box-container .box .btn{
+    display: block;
+}
 
 
 
@@ -272,13 +400,17 @@ background:none;
         font-size: 50%;
     }
 
+.heading{
+    font-size: 2.5rem;
+}
+
     .header-1{
     flex-flow: column;
 
     }
     .header-1 .search-box-container{
         width: 100%;
-        margin-top: 2rem;
+        margin-top: 15rem;
     }
 
 }
