--- a/FSW-113/week2/assignments/warehouse/warehouse.css
+++ b/FSW-113/week2/assignments/warehouse/warehouse.css
@@ -34,6 +34,7 @@
   border-radius: 8px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: small;
+  list-style:square;
 }
 
 .detailHeader {
@@ -51,6 +52,7 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: small;
   padding: 4px;
+  list-style: none;
 }
 
 .bottomBar {
