--- a/FSW-113/capstone/style.css
+++ b/FSW-113/capstone/style.css
@@ -3,61 +3,63 @@
     to the example as possible. You will need to use display:grid to make the 
     bug reports display in three columns (see week 4).
 */
-body{
+body {
     background-image: url(./images/wallpaper.jpg);
-    margin: .5em;
+    margin: 0;
     padding: .5em;
     color: #ffff;
 }
 
 
-.reportWrapper{
+.reportWrapper {
     margin: auto;
     width: 20em;
     padding: .5em;
     border: .2mm solid white;
     border-radius: .5rem;
 }
+
 .topbar {
     border: red;
     border-radius: .2em;
     background-color: red;
-    color:#ffff;   
+    color: #ffff;
     margin: 0 0 .2em;
-    
+
 }
+
 .topbar img {
     padding: .2em .2em 0 .2em;
 }
 
-#bttnDiv button{
+#bttnDiv button {
     background-color: red;
     color: #ffff;
     border: .1mm solid gray;
 }
 
-.listWrapper{
-    
+.listWrapper {
+    display: flex;
+    flex-wrap: wrap;
     border: .2mm solid white;
     border-radius: .5em;
-    height: 15em;
-
+    height: 100%;
+    padding: 20px;
 }
 
 .newBugDiv {
-    display: grid;
-    height: 90%;
-    width: 25%;
+    display: block;
+    height: 20em;
+    width: 20em;
     margin: .5em;
     border: .1mm solid gray;
     border-radius: .5em;
     background-color: gray;
 }
 
-#deleteBtn{
-    display: flex;
-    flex-wrap: wrap-reverse;
-    align-self:flex-end;
+#deleteBtn {
+    position: relative;
+    margin: 70%;
     height: 10mm;
     width: 10mm;
     border-radius: 50%;
